--- a/.github/workflows/debug_notify.yml
+++ b/.github/workflows/debug_notify.yml
@@ -25,5 +25,7 @@ jobs:
           # 将刚才配置的 Secrets 映射给脚本使用
           PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
           PUSHPLUS_TOPIC: ${{ secrets.PUSHPLUS_TOPIC }}
+          # 添加下面这一行，随便填个字符串，只要不是空的就行
+          WECHAT_WEBHOOK_URL: "ignore_this"
         run: |
           python test_env.py --notify
